// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateEventEmitterCpp can generate fixture ARRAY_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/BOOLEAN_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture COLOR_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/COLOR_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture COMMANDS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/COMMANDS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/COMMANDS_AND_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture DIMENSION_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/DIMENSION_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/DOUBLE_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/EventEmitters.h>


namespace facebook::react {

void EventsNestedObjectNativeComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    {
  auto location_codegen1 = jsi::Object(runtime);
  {
    auto source_codegen2 = jsi::Object(runtime);
    source_codegen2.setProperty(runtime, \\"url\\", event.location.source.url);
    location_codegen1.setProperty(runtime, \\"source\\", source_codegen2);
  }
  location_codegen1.setProperty(runtime, \\"x\\", event.location.x);
  location_codegen1.setProperty(runtime, \\"y\\", event.location.y);
  payload.setProperty(runtime, \\"location\\", location_codegen1);
}
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EVENT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EVENT_PROPS/EventEmitters.h>
#include <jsi/JSIDynamic.h>

namespace facebook::react {

void EventsNativeComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
payload.setProperty(runtime, \\"source\\", event.source);
payload.setProperty(runtime, \\"progress\\", event.progress);
payload.setProperty(runtime, \\"scale\\", event.scale);
    return payload;
  });
}


void EventsNativeComponentEventEmitter::onArrayEventType(OnArrayEventType event) const {
  dispatchEvent(\\"arrayEventType\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    
    auto bool_array_event_prop_codegen1 = jsi::Array(runtime, event.bool_array_event_prop.size());
    size_t bool_array_event_propIndex_codegen2 = 0;
    for (auto bool_array_event_propValue_codegen3 : event.bool_array_event_prop) {
      bool_array_event_prop_codegen1.setValueAtIndex(runtime, bool_array_event_propIndex_codegen2++, (bool)bool_array_event_propValue_codegen3);
    }
    payload.setProperty(runtime, \\"bool_array_event_prop\\", bool_array_event_prop_codegen1);
  

    auto string_enum_event_prop_codegen4 = jsi::Array(runtime, event.string_enum_event_prop.size());
    size_t string_enum_event_propIndex_codegen5 = 0;
    for (auto string_enum_event_propValue_codegen6 : event.string_enum_event_prop) {
      string_enum_event_prop_codegen4.setValueAtIndex(runtime, string_enum_event_propIndex_codegen5++, toString(string_enum_event_propValue_codegen6));
    }
    payload.setProperty(runtime, \\"string_enum_event_prop\\", string_enum_event_prop_codegen4);
  

    auto array_array_event_prop_codegen7 = jsi::Array(runtime, event.array_array_event_prop.size());
    size_t array_array_event_propIndex_codegen8 = 0;
    for (auto array_array_event_propValue_codegen9 : event.array_array_event_prop) {
      auto array_array_event_propArray_codegen10 = jsi::Array(runtime, array_array_event_propValue_codegen9.size());
      size_t array_array_event_propIndex_codegen8Internal = 0;
      for (auto array_array_event_propValue_codegen9Internal : array_array_event_propValue_codegen9) {
        array_array_event_propArray_codegen10.setValueAtIndex(runtime, array_array_event_propIndex_codegen8Internal++, array_array_event_propValue_codegen9Internal);
      }
      array_array_event_prop_codegen7.setValueAtIndex(runtime, array_array_event_propIndex_codegen8++, array_array_event_propArray_codegen10);
    }
    payload.setProperty(runtime, \\"array_array_event_prop\\", array_array_event_prop_codegen7);
  

    auto array_object_event_prop_codegen11 = jsi::Array(runtime, event.array_object_event_prop.size());
    size_t array_object_event_propIndex_codegen12 = 0;
    for (auto array_object_event_propValue_codegen13 : event.array_object_event_prop) {
      auto array_object_event_propObject_codegen14 = jsi::Object(runtime);
      array_object_event_propObject_codegen14.setProperty(runtime, \\"lat\\", array_object_event_propValue_codegen13.lat);
array_object_event_propObject_codegen14.setProperty(runtime, \\"lon\\", array_object_event_propValue_codegen13.lon);

    auto names_codegen15 = jsi::Array(runtime, array_object_event_propValue_codegen13.names.size());
    size_t namesIndex_codegen16 = 0;
    for (auto namesValue_codegen17 : array_object_event_propValue_codegen13.names) {
      names_codegen15.setValueAtIndex(runtime, namesIndex_codegen16++, namesValue_codegen17);
    }
    array_object_event_propObject_codegen14.setProperty(runtime, \\"names\\", names_codegen15);
  
      array_object_event_prop_codegen11.setValueAtIndex(runtime, array_object_event_propIndex_codegen12++, array_object_event_propObject_codegen14);
    }
    payload.setProperty(runtime, \\"array_object_event_prop\\", array_object_event_prop_codegen11);
  

    auto array_mixed_event_prop_codegen18 = jsi::Array(runtime, event.array_mixed_event_prop.size());
    size_t array_mixed_event_propIndex_codegen19 = 0;
    for (auto array_mixed_event_propValue_codegen20 : event.array_mixed_event_prop) {
      array_mixed_event_prop_codegen18.setValueAtIndex(runtime, array_mixed_event_propIndex_codegen19++, jsi::valueFromDynamic(runtime, array_mixed_event_propValue_codegen20));
    }
    payload.setProperty(runtime, \\"array_mixed_event_prop\\", array_mixed_event_prop_codegen18);
  
    return payload;
  });
}


void EventsNativeComponentEventEmitter::onEventDirect(OnEventDirect event) const {
  dispatchEvent(\\"eventDirect\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}


void EventsNativeComponentEventEmitter::onOrientationChange(OnOrientationChange event) const {
  dispatchEvent(\\"orientationChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"orientation\\", toString(event.orientation));
    return payload;
  });
}

void EventsNativeComponentEventEmitter::onEnd() const {
  dispatchEvent(\\"end\\");
}

void EventsNativeComponentEventEmitter::onEventWithMixedPropAttribute(OnEventWithMixedPropAttribute event) const {
  dispatchEvent(\\"eventWithMixedPropAttribute\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", jsi::valueFromDynamic(runtime, event.value));
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/EventEmitters.h>


namespace facebook::react {

void InterfaceOnlyComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"paperChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}


void InterfaceOnlyComponentEventEmitter::onDirectChange(OnDirectChange event) const {
  dispatchEvent(\\"paperDirectChange\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EXCLUDE_ANDROID_IOS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/EventEmitters.h>


namespace facebook::react {


} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture FLOAT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/FLOAT_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture IMAGE_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/IMAGE_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INSETS_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INSETS_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INT32_ENUM_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INTEGER_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INTEGER_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/INTERFACE_ONLY/EventEmitters.h>


namespace facebook::react {

void InterfaceOnlyComponentEventEmitter::onChange(OnChange event) const {
  dispatchEvent(\\"change\\", [event=std::move(event)](jsi::Runtime &runtime) {
    auto payload = jsi::Object(runtime);
    payload.setProperty(runtime, \\"value\\", event.value);
    return payload;
  });
}

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture MIXED_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/MIXED_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/MULTI_NATIVE_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/NO_PROPS_NO_EVENTS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture OBJECT_PROPS 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/OBJECT_PROPS/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture POINT_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/POINT_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/STRING_ENUM_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture STRING_PROP 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/STRING_PROP/EventEmitters.h>


namespace facebook::react {

} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/EventEmitters.h>


namespace facebook::react {


} // namespace facebook::react
",
}
`;

exports[`GenerateEventEmitterCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "EventEmitters.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateEventEmitterCpp.js
 */

#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/EventEmitters.h>


namespace facebook::react {


} // namespace facebook::react
",
}
`;
